@@ -101,6 +101,7 @@ Wagtail now provides a set of utilities for creating data migrations on StreamFi
  * Extracted revision and draft state logic from generic views into mixins (Sage Abdullah)
  * Extracted generic lock / unlock views from page lock / unlock views (Sage Abdullah)
  * Move `identity` JavaScript util into shared utils folder (LB (Ben Johnston))
+ * Remove unnecessary declaration of function to determine URL query params, instead use `URLSearchParams` (Loveth Omokaro)
 
 ## Upgrade considerations
 
